[package]
name = "mpu6050"
version = "0.2.0"
edition = "2021"


[lib] 
name = "mpu6050"
path = "src/lib.rs"

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.1.0"

# Embassy
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.9.0", features = ["defmt", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }

# Required for the example to link correctly
[profile.dev]
debug = true
lto = true
opt-level = "z"